# dynamick_cast

./: .clang-tidy  .gitignore  CMakeLists.txt  HowToBuild.md  LICENSE  README.md  audio_interface.hpp  audio_wrapper.hpp  beastly_connection.cpp  beastly_connection.hpp  constexpr_string_functions.hpp  download_shared_state.cpp  download_shared_state.hpp  dynamick_cast.pro  episode.cpp  episode.hpp  getter.cpp  getter.hpp  http_connection_resources.cpp  http_connection_resources.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  podcast.cpp  podcast.hpp  resources.qrc  rss_getter.cpp  rss_getter.hpp  rss_parser.cpp  string_functions.cpp  string_functions.hpp  url_parser.cpp  url_parser.hpp  xml_parser.tpp
.github/workflows/: cmake.yml
audio_backends/: audiere_wrapper.cpp  audiere_wrapper.hpp  sfml_wrapper.cpp  sfml_wrapper.hpp
contrib/function2/: LICENSE.txt
contrib/sfml_mp3/: SoundFileReaderMp3.cpp  SoundFileReaderMp3.hpp  mp3.cpp  mp3.hpp  music_adapter.cpp  music_adapter.hpp
include/dynamick_cast/: debug_print.hpp  generic_exception_handling.hpp  macros.hpp  thread_safe_interface.hpp
lib/: CMakeLists.txt
lib/function2/: CMakeLists.txt
lib/icons/: CMakeLists.txt
lib/sfml_mp3/: CMakeLists.txt  README.md  SoundFileReaderMp3.hpp  mp3.cpp
src/: CMakeLists.txt  main.cpp
src/audio/: CMakeLists.txt  audio_abstraction.hpp  audio_wrapper.hpp
src/audio/audiere/: CMakeLists.txt  audiere_wrapper.cpp  audiere_wrapper.hpp
src/audio/sfml/: CMakeLists.txt  sfml_wrapper.cpp  sfml_wrapper.hpp
src/gui/: CMakeLists.txt  gui_abstraction.hpp  gui_interface.hpp
src/gui/dear_imgui/: CMakeLists.txt  dear_imgui_wrapper.cpp  dear_imgui_wrapper.hpp
src/gui/qt5/: CMakeLists.txt  download_shared_state.cpp  download_shared_state.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qt_wrapper.cpp  qt_wrapper.hpp  resources.qrc
src/networking/: CMakeLists.txt  beastly_connection.cpp  beastly_connection.hpp  egg_timer.hpp  getter.cpp  getter.hpp  url_parser.cpp
src/shared/: CMakeLists.txt  string_functions.cpp  user_desired_state.hpp
xml_parsing_backends/: ptree_adapter.hpp  pugixml_adapter.hpp
